syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message AbilityActionSetRandomOverrideMapValue {
	float random_value = 1;
}