syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";


enum AbilityInvokeArgument {
	AbilityInvokeArgument_ABILITY_NONE = 0;
	AbilityInvokeArgument_ABILITY_META_MODIFIER_CHANGE = 1;
	AbilityInvokeArgument_ABILITY_META_COMMAND_MODIFIER_CHANGE_REQUEST = 2;
	AbilityInvokeArgument_ABILITY_META_SPECIAL_FLOAT_ARGUMENT = 3;
	AbilityInvokeArgument_ABILITY_META_OVERRIDE_PARAM = 4;
	AbilityInvokeArgument_ABILITY_META_CLEAR_OVERRIDE_PARAM = 5;
	AbilityInvokeArgument_ABILITY_META_REINIT_OVERRIDEMAP = 6;
	AbilityInvokeArgument_ABILITY_META_GLOBAL_FLOAT_VALUE = 7;
	AbilityInvokeArgument_ABILITY_META_CLEAR_GLOBAL_FLOAT_VALUE = 8;
	AbilityInvokeArgument_ABILITY_META_ABILITY_ELEMENT_STRENGTH = 9;
	AbilityInvokeArgument_ABILITY_META_ADD_OR_GET_ABILITY_AND_TRIGGER = 10;
	AbilityInvokeArgument_ABILITY_META_SET_KILLED_SETATE = 11;
	AbilityInvokeArgument_ABILITY_META_SET_ABILITY_TRIGGER = 12;
	AbilityInvokeArgument_ABILITY_META_ADD_NEW_ABILITY = 13;
	AbilityInvokeArgument_ABILITY_META_REMOVE_ABILITY = 14;
	AbilityInvokeArgument_ABILITY_META_SET_MODIFIER_APPLY_ENTITY = 15;
	AbilityInvokeArgument_ABILITY_META_MODIFIER_DURABILITY_CHANGE = 16;
	AbilityInvokeArgument_ABILITY_META_ELEMENT_REACTION_VISUAL = 17;
	AbilityInvokeArgument_ABILITY_META_SET_POSE_PARAMETER = 18;
	AbilityInvokeArgument_ABILITY_META_UPDATE_BASE_REACTION_DAMAGE = 19;
	AbilityInvokeArgument_ABILITY_META_TRIGGER_ELEMENT_REACTION = 20;
	AbilityInvokeArgument_ABILITY_META_LOSE_HP = 21;
	AbilityInvokeArgument_ABILITY_META_DURABILITY_IS_ZERO = 22;
	AbilityInvokeArgument_ABILITY_META_TRIGGER_ARKHE_REACTION = 23;
	AbilityInvokeArgument_ABILITY_META_CHANGE_NYX_VALUE = 24;
	AbilityInvokeArgument_ABILITY_META_ADD_SPECIAL_ENERGY_VALUE = 25;
	AbilityInvokeArgument_ABILITY_ACTION_TRIGGER_ABILITY = 50;
	AbilityInvokeArgument_ABILITY_ACTION_SET_CRASH_DAMAGE = 51;
	AbilityInvokeArgument_ABILITY_ACTION_EFFECT = 52;
	AbilityInvokeArgument_ABILITY_ACTION_SUMMON = 53;
	AbilityInvokeArgument_ABILITY_ACTION_BLINK = 54;
	AbilityInvokeArgument_ABILITY_ACTION_CREATE_GADGET = 55;
	AbilityInvokeArgument_ABILITY_ACTION_APPLY_LEVEL_MODIFIER = 56;
	AbilityInvokeArgument_ABILITY_ACTION_GENERATE_ELEM_BALL = 57;
	AbilityInvokeArgument_ABILITY_ACTION_SET_RANDOM_OVERRIDE_MAP_VALUE = 58;
	AbilityInvokeArgument_ABILITY_ACTION_SERVER_MONSTER_LOG = 59;
	AbilityInvokeArgument_ABILITY_ACTION_CREATE_TILE = 60;
	AbilityInvokeArgument_ABILITY_ACTION_DESTROY_TILE = 61;
	AbilityInvokeArgument_ABILITY_ACTION_FIRE_AFTER_IMAGE = 62;
	AbilityInvokeArgument_ABILITY_ACTION_DEDUCT_STAMINA = 63;
	AbilityInvokeArgument_ABILITY_ACTION_HIT_EFFECT = 64;
	AbilityInvokeArgument_ABILITY_ACTION_SET_BULLET_TRACK_TARGET = 65;
	AbilityInvokeArgument_ABILITY_ACTION_FIREWORK_EFFECT = 66;
	AbilityInvokeArgument_ABILITY_ACTION_LEVEL_BANK_ADD_STUFF = 67;
	AbilityInvokeArgument_ABILITY_ACTION_GET_MATERIAL_PARAM_FLOAT = 68;
	AbilityInvokeArgument_ABILITY_ACTION_GET_MATERIAL_PARAM_VECTOR = 69;
	AbilityInvokeArgument_ABILITY_ACTION_SPECTACLE_BUILD_RECREATE_GADGET = 70;
	AbilityInvokeArgument_ABILITY_MIXIN_AVATAR_STEER_BY_CAMERA = 100;
	AbilityInvokeArgument_ABILITY_MIXIN_MONSTER_DEFEND = 101;
	AbilityInvokeArgument_ABILITY_MIXIN_WIND_ZONE = 102;
	AbilityInvokeArgument_ABILITY_MIXIN_COST_STAMINA = 103;
	AbilityInvokeArgument_ABILITY_MIXIN_ELITE_SHIELD = 104;
	AbilityInvokeArgument_ABILITY_MIXIN_ELEMENT_SHIELD = 105;
	AbilityInvokeArgument_ABILITY_MIXIN_GLOBAL_SHIELD = 106;
	AbilityInvokeArgument_ABILITY_MIXIN_SHIELD_BAR = 107;
	AbilityInvokeArgument_ABILITY_MIXIN_WIND_SEED_SPAWNER = 108;
	AbilityInvokeArgument_ABILITY_MIXIN_DO_ACTION_BY_ELEMENT_REACTION = 109;
	AbilityInvokeArgument_ABILITY_MIXIN_FIELD_ENTITY_COUNT_CHANGE = 110;
	AbilityInvokeArgument_ABILITY_MIXIN_SCENE_PROP_SYNC = 111;
	AbilityInvokeArgument_ABILITY_MIXIN_WIDGET_MP_SUPPORT = 112;
	AbilityInvokeArgument_ABILITY_MIXIN_DO_ACTION_BY_SELF_MODIFIER_ELEMENT_DURABILITY_RATIO = 113;
	AbilityInvokeArgument_ABILITY_MIXIN_FIREWORKS_LAUNCHER = 114;
	AbilityInvokeArgument_ABILITY_MIXIN_ATTACK_RESULT_CREATE_COUNT = 115;
	AbilityInvokeArgument_ABILITY_MIXIN_UGC_TIME_CONTROL = 116;
	AbilityInvokeArgument_ABILITY_MIXIN_AVATAR_COMBAT = 117;
	AbilityInvokeArgument_ABILITY_MIXIN_DEATH_ZONE_REGIONAL_PLAY_MIXIN = 118;
	AbilityInvokeArgument_ABILITY_MIXIN_UI_INTERACT = 119;
	AbilityInvokeArgument_ABILITY_MIXIN_SHOOT_FROM_CAMERA = 120;
	AbilityInvokeArgument_ABILITY_MIXIN_ERASE_BRICK_ACTIVITY = 121;
	AbilityInvokeArgument_ABILITY_MIXIN_BREAKOUT = 122;
	AbilityInvokeArgument_ABILITY_MIXIN_DAMAGE_LOAN = 123;
	AbilityInvokeArgument_ABILITY_MIXIN_BROADCAST_GV = 124;
	AbilityInvokeArgument_ABILITY_MIXIN_RECEIVE_GV = 125;
	AbilityInvokeArgument_ABILITY_MIXIN_RAYCAST_SELECT_TARGET = 126;
	AbilityInvokeArgument_ABILITY_MIXIN_ENERGY_CRYSTAL_TARGET = 127;
	AbilityInvokeArgument_ABILITY_MIXIN_ROTATION_FOLLOW_CAMERA = 128;
	AbilityInvokeArgument_ABILITY_MIXIN_BUOYANT_FORCE = 129;
	AbilityInvokeArgument_ABILITY_MIXIN_FILMFEST_BALL_GAME = 130;
	AbilityInvokeArgument_ABILITY_MIXIN_CHECK_SCAN_ENTITY = 131;
	AbilityInvokeArgument_ABILITY_MIXIN_TIME_TRACK_PLAYER = 133;
	AbilityInvokeArgument_ABILITY_MIXIN_PART_FOLLOW = 134;
	AbilityInvokeArgument_ABILITY_MIXIN_CHANGE_PHLOGISTON = 135;
	AbilityInvokeArgument_ABILITY_MIXIN_HUMAN_DRAGON_COLLAB_PICK_PHLOGISTON_BALL = 136;
	AbilityInvokeArgument_ABILITY_MIXIN_FREQUENCY_SHIELD_BAR = 137;
	AbilityInvokeArgument_ABILITY_MIXIN_SHAMAN_VIEW_TARGET = 138;
	AbilityInvokeArgument_ABILITY_MIXIN_ATTACH_MODIFIER_TO_GLOBAL_VALUE = 139;
	AbilityInvokeArgument_ABILITY_MIXIN_BRICK_MATRIX = 140;
	AbilityInvokeArgument_ABILITY_MIXIN_VEHICLE_STEER_BY_CAMERA = 141;
	AbilityInvokeArgument_ABILITY_MIXIN_AVATAR_SPECIAL_MOVE = 143;
	AbilityInvokeArgument_ABILITY_MIXIN_MODIFY_DAMAGE = 145;
}