syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "AbilityInvokeArgument.proto";
import "AbilityInvokeEntryHead.proto";
import "ForwardType.proto";


message AbilityInvokeEntry {
	double total_tick_time = 15;
	bytes ability_data = 9;
	bool is_ignore_auth = 5;
	uint32 forward_peer = 12;
	uint32 event_id = 13;
	uint32 entity_id = 4;
	AbilityInvokeArgument argument_type = 6;
	ForwardType forward_type = 7;
	AbilityInvokeEntryHead head = 8;
}