syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "AbilityInvokeEntry.proto";


message ClientAbilityInitFinishNotify {
	uint32 entity_id = 2;
	repeated AbilityInvokeEntry invokes = 14;
}